--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -122,7 +122,36 @@
       "Epoch [2/10], Step [300/600], Loss: 0.0651\n",
       "Epoch [2/10], Step [400/600], Loss: 0.0325\n",
       "Epoch [2/10], Step [500/600], Loss: 0.0890\n",
-      "Epoch [2/10], Step [600/600], Loss: 0.0348\n"
+      "Epoch [2/10], Step [600/600], Loss: 0.0348\n",
+      "Epoch [3/10], Step [100/600], Loss: 0.0585\n",
+      "Epoch [3/10], Step [200/600], Loss: 0.0285\n",
+      "Epoch [3/10], Step [300/600], Loss: 0.1818\n",
+      "Epoch [3/10], Step [400/600], Loss: 0.0499\n",
+      "Epoch [3/10], Step [500/600], Loss: 0.0280\n",
+      "Epoch [3/10], Step [600/600], Loss: 0.1117\n",
+      "Epoch [4/10], Step [100/600], Loss: 0.0518\n",
+      "Epoch [4/10], Step [200/600], Loss: 0.0223\n",
+      "Epoch [4/10], Step [300/600], Loss: 0.0676\n",
+      "Epoch [4/10], Step [400/600], Loss: 0.0430\n",
+      "Epoch [4/10], Step [500/600], Loss: 0.0237\n",
+      "Epoch [4/10], Step [600/600], Loss: 0.0416\n",
+      "Epoch [5/10], Step [100/600], Loss: 0.0134\n",
+      "Epoch [5/10], Step [200/600], Loss: 0.0344\n",
+      "Epoch [5/10], Step [300/600], Loss: 0.0750\n",
+      "Epoch [5/10], Step [400/600], Loss: 0.0934\n",
+      "Epoch [5/10], Step [500/600], Loss: 0.1017\n",
+      "Epoch [5/10], Step [600/600], Loss: 0.0274\n",
+      "Epoch [6/10], Step [100/600], Loss: 0.0246\n",
+      "Epoch [6/10], Step [200/600], Loss: 0.0692\n",
+      "Epoch [6/10], Step [300/600], Loss: 0.0519\n",
+      "Epoch [6/10], Step [400/600], Loss: 0.0336\n",
+      "Epoch [6/10], Step [500/600], Loss: 0.0079\n",
+      "Epoch [6/10], Step [600/600], Loss: 0.0237\n",
+      "Epoch [7/10], Step [100/600], Loss: 0.0089\n",
+      "Epoch [7/10], Step [200/600], Loss: 0.0047\n",
+      "Epoch [7/10], Step [300/600], Loss: 0.0483\n",
+      "Epoch [7/10], Step [400/600], Loss: 0.0856\n",
+      "Epoch [7/10], Step [500/600], Loss: 0.0174\n"
      ]
     }
    ],
