Add time measurement for training

--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,23 +11,25 @@
     "import torch.nn.functional as F\n",
     "import torchvision.datasets as dsets\n",
     "import torchvision.transforms as transforms\n",
-    "from torch.autograd import Variable"
+    "from torch.autograd import Variable\n",
+    "\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "epochs = 5\n",
     "batch_sz = 64\n",
-    "learning_rate = 0.001"
+    "learning_rate = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,66 +98,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/dist-packages/ipykernel_launcher.py:15: UserWarning: invalid index of a 0-dim tensor. This will be an error in PyTorch 0.5. Use tensor.item() to convert a 0-dim tensor to a Python number\n",
-      "  from ipykernel import kernelapp as app\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/5], Step [64/937], Loss: 0.3834\n",
-      "Epoch [1/5], Step [128/937], Loss: 0.3759\n",
-      "Epoch [1/5], Step [192/937], Loss: 0.2387\n",
-      "Epoch [1/5], Step [256/937], Loss: 0.0666\n",
-      "Epoch [1/5], Step [320/937], Loss: 0.1424\n",
-      "Epoch [1/5], Step [384/937], Loss: 0.1110\n",
-      "Epoch [1/5], Step [448/937], Loss: 0.0592\n",
-      "Epoch [1/5], Step [512/937], Loss: 0.2297\n",
-      "Epoch [1/5], Step [576/937], Loss: 0.1910\n",
-      "Epoch [1/5], Step [640/937], Loss: 0.0339\n",
-      "Epoch [1/5], Step [704/937], Loss: 0.1616\n",
-      "Epoch [1/5], Step [768/937], Loss: 0.0470\n",
-      "Epoch [1/5], Step [832/937], Loss: 0.0361\n",
-      "Epoch [1/5], Step [896/937], Loss: 0.0817\n",
-      "Epoch [2/5], Step [64/937], Loss: 0.0187\n",
-      "Epoch [2/5], Step [128/937], Loss: 0.0239\n",
-      "Epoch [2/5], Step [192/937], Loss: 0.0649\n",
-      "Epoch [2/5], Step [256/937], Loss: 0.0160\n",
-      "Epoch [2/5], Step [320/937], Loss: 0.0310\n",
-      "Epoch [2/5], Step [384/937], Loss: 0.0581\n",
-      "Epoch [2/5], Step [448/937], Loss: 0.1325\n",
-      "Epoch [2/5], Step [512/937], Loss: 0.0298\n",
-      "Epoch [2/5], Step [576/937], Loss: 0.0406\n",
-      "Epoch [2/5], Step [640/937], Loss: 0.0638\n",
-      "Epoch [2/5], Step [704/937], Loss: 0.0942\n",
-      "Epoch [2/5], Step [768/937], Loss: 0.0266\n",
-      "Epoch [2/5], Step [832/937], Loss: 0.0231\n",
-      "Epoch [2/5], Step [896/937], Loss: 0.0094\n",
-      "Epoch [3/5], Step [64/937], Loss: 0.0415\n",
-      "Epoch [3/5], Step [128/937], Loss: 0.0388\n",
-      "Epoch [3/5], Step [192/937], Loss: 0.0199\n",
-      "Epoch [3/5], Step [256/937], Loss: 0.0875\n",
-      "Epoch [3/5], Step [320/937], Loss: 0.1298\n",
-      "Epoch [3/5], Step [384/937], Loss: 0.0783\n",
-      "Epoch [3/5], Step [448/937], Loss: 0.1553\n",
-      "Epoch [3/5], Step [512/937], Loss: 0.0217\n",
-      "Epoch [3/5], Step [576/937], Loss: 0.0166\n",
-      "Epoch [3/5], Step [640/937], Loss: 0.0446\n",
-      "Epoch [3/5], Step [704/937], Loss: 0.0059\n",
-      "Epoch [3/5], Step [768/937], Loss: 0.0669\n",
-      "Epoch [3/5], Step [832/937], Loss: 0.0113\n"
+      "Time elapsed = 125.32634782791138\n"
      ]
     }
    ],
    "source": [
+    "startTime = time.time()\n",
+    "\n",
     "for epoch in range(epochs):\n",
     "    for i, (images, labels) in enumerate(train_loader):\n",
     "        images = Variable(images)\n",
@@ -167,17 +123,24 @@
     "        \n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "        \n",
-    "        if (i+1) % batch_sz == 0:\n",
-    "            print('Epoch [%d/%d], Step [%d/%d], Loss: %.4f'\n",
-    "                 %(epoch+1, epochs, i+1, len(train_dataset)//batch_sz, loss.data[0]))"
+    "\n",
+    "endTime = time.time()\n",
+    "print(\"Time elapsed to train = \" + str(endTime - startTime))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of the network on the 10K test images: 94.98 %\n"
+     ]
+    }
+   ],
    "source": [
     "i=0\n",
     "correct = 0\n",
@@ -201,21 +164,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
